Preparing events data

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 
   <main id="main">
     <div class="main-wrapper">
-      <section class="events">
-        
+      <section class="events flex flex-column flex-justify-center flex-align-start">
+        <h2>НАШИ СОБЫТИЯ</h2>
+        <div class="events-container"></div>
       </section>
     </div>
   </main>
