Dynamically loaded events

--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@
 
   <main id="main">
     <div class="main-wrapper">
+
       <section class="events flex flex-column flex-justify-center flex-align-start">
         <h2>НАШИ СОБЫТИЯ</h2>
-        <div class="events-container"></div>
+        <div class="events-container flex flex-justify-between" id="events-container"></div>
       </section>
+      
     </div>
   </main>
 
+  <script src="assets/js/components/OurEvent.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
