--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </header>
 
   <div class="carousel" id="header-carousel">
-      <div class="car-item car-active" id="meet--car-item1"></div>
-      <div class="car-item" id="meet--car-item2"></div>
-      <div class="car-item" id="meet--car-item3"></div>
+      <div class="car-item car-active"></div>
+      <div class="car-item car-inactive"></div>
+      <div class="car-item car-inactive"></div>
     </div>
 
   <div class="meet-wrapper">
@@ -46,7 +46,15 @@
         <h2>НАШИ СОБЫТИЯ</h2>
         <div class="events-container flex flex-justify-between" id="events-container"></div>
       </section>
-      
+
+      <section class="restaurant flex flex-justify-start flex-align-center">
+        <div class="restaurant-text flex flex-column flex-justify-center">
+          <h2>РЕСТОРАН</h2>
+          <p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. </p>
+          <a href="#">ПОСМОТРЕТЬ МЕНЮ</a>
+        </div>
+      </section>
+
     </div>
   </main>
 
