Added audio to the page

--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
         <div class="restaurant-image"><img src="assets/img/header-carousel/common.jpg" alt="main hall"></div>
       </section>
 
+      <section class="gallery flex">
+
+      </section>
+
     </div>
   </main>
+
+  <audio src="./assets/audio/anacondaz-pivovarov-chaos.mp3" autoplay loop preload="auto" id="audio"></audio>
 
   <script src="assets/js/components/OurEvent.js"></script>
   <script src="assets/js/main.js"></script>
