Try to fix autoplay

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
   </footer>
 
-  <audio src="./assets/audio/anacondaz-pivovarov-chaos.mp3" autoplay loop preload="auto" id="audio"></audio>
+  <audio src="./assets/audio/anacondaz-pivovarov-chaos.mp3" autoplay loop preload="none" id="audio"></audio>
   <!-- add autoplay  -->
 
   <script src="assets/js/components/OurEvent.js"></script>
