--- a/index.html
+++ b/index.html
@@ -69,15 +69,13 @@
 
   <footer class="flex flex-justify-center flex-align-center">
     <div class="footer-inner flex flex-justify-between">
-      <div class="learn-more"></div>
+      <a href="tel:+380551234567">будь в курсе самых свежих новостей</a>
       <div class="audio-control audio-active" id="audio-control">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
         <span></span>
-        <div data-audio="play" class="hidden-button" id="audio-play"></div>
-        <div data-audio="stop" class="hidden-button unhidden" id="audio-stop"></div>
       </div>
     </div>
   </footer>
